# mllmopd

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
docs/: audit-brief-smoke500.md  common-pitfalls.md  eval_schema_v1.md  experiment-protocol.md  finding-2026-05-19-vision-conditioned.md  gpt-brief-2026-05-21-t1-negative-result.md  gpt-brief-2026-05-21-t1-v1-negative-result.md  gpt-brief-2026-05-22-t1-v1p5b-positive-result.md  gpt-brief-2026-05-24-tier2a-results.md  gpt-brief-2026-05-26-step3a-onpolicy-pivot.md  gpt-brief-2026-05-26-step3a-phase2-integration.md  gpt-diagnosis-2026-05-20-t1-oom-v10-update.md  gpt-diagnosis-2026-05-20-t1-oom-v7-update.md  gpt-diagnosis-2026-05-20-t1-oom.md  gpt-reply-2026-05-20-v10-update.md  gpt-review-2026-05-20-t1-full-implementation.md  gpt-review-2026-05-20-weight-sync.md  gpt-review-2026-05-22-tier2a-off-policy-kd.md  gpt-review-2026-05-24-a0-energy-audit.md  gpt-review-2026-05-24-counterfactual-6variants.md  h800-migration-checklist.md  h800-venv-backup.md  handoff-2026-05-18.md  handoff-2026-05-19.md  handoff-2026-05-20-oom-resolved.md  handoff-2026-05-20-v10-stuck.md  handoff-2026-05-20.md  handoff-2026-05-22-brief-v2-tier2-next.md  handoff-2026-05-22-v1p5b-positive.md  handoff-2026-05-22-xbox-bringup.md  handoff-2026-05-23-t2-1-result-pending-gpt.md  handoff-2026-05-24-t2-2-launched-tier2a-brief-sent.md  handoff-2026-05-25-tier2a-gpt-in-t2-2-paused.md  implementation.md  migrate-env.md  progress-report-2026-05-26.md  research-plan.md  server-inventory.md  step0-results-2026-05-25.md  (+13 more)
scripts/audit/: _tam_core.py  (+31 more)
(+198 files in other folders)
