[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mllmopd"
version = "0.0.1"
description = "Local analysis package for MLLM On-Policy Distillation research"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Shihao Hou", email = "shihao.hou@outlook.com" }]

# Light deps so it installs on Mac without GPU. Heavy deps (torch, transformers,
# vllm, lmms-eval) live in the devbox conda envs; the diagnostic runners import
# them lazily inside functions.
dependencies = [
  "numpy>=1.24,<2",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "datasets>=2.18",
  "huggingface-hub>=0.24",
  "pillow>=10.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
analysis = [
  "jupyter",
  "ipykernel",
  "seaborn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
